<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ibm.wala</groupId>
  <artifactId>ml</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>core</module>
    <module>jep</module>
    <module>jython</module>
    <module>ml</module>
    <module>com.ibm.wala.cast.python.report</module>
  </modules>
  <properties>
    <project-version>0.0.1-SNAPSHOT</project-version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.version>3.14.0</maven.compiler.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <build-alias>b000</build-alias>
    <wala.version>1.6.12-SNAPSHOT</wala.version>
    <spotless.version>2.44.4</spotless.version>
    <maven.surefire.version>3.5.3</maven.surefire.version>
    <parallel>both</parallel>
    <logging.config.file>${maven.multiModuleProjectDirectory}/logging.properties</logging.config.file>
    <jacoco-version>0.8.13</jacoco-version>
    <argLine/>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <formats>
              <format>
                <includes>
                  <include>**/*</include>
                </includes>
                <excludes>
                  <exclude>**/target/</exclude>
                  <exclude>**/__pycache__/</exclude>
                  <exclude>**/*.swp</exclude>
                  <exclude>**/*.swp</exclude>
                  <exclude>**/*.swo</exclude>
                  <exclude>**/*.swn</exclude>
                  <exclude>**/.idea/</exclude>
                  <exclude>**/.vscode/</exclude>
                  <exclude>**/node_modules/</exclude>
                  <exclude>**/cachedir/</exclude>
                  <exclude>**/*~</exclude>
                  <exclude>**/*.min.*</exclude>
                  <exclude>**/tmp.*</exclude>
                  <exclude>**/*.jar</exclude>
                  <exclude>**/*.exe</exclude>
                  <exclude>**/*.dll</exclude>
                  <exclude>**/*.class</exclude>
                  <exclude>**/*.png</exclude>
                  <exclude>**/*.jpg</exclude>
                  <exclude>**/*.gif</exclude>
                  <exclude>**/*.xml</exclude>
                  <exclude>**/.pydevproject</exclude>
                  <exclude>**/*pom.xml</exclude>
                  <exclude>**/*.md</exclude>
                  <exclude>**/.gitignore</exclude>
                  <exclude>**/*.java</exclude>
                  <exclude>**/*.gradle/</exclude>
                  <exclude>**/.pytest_cache/</exclude>
                  <exclude>**/*.log</exclude>
                  <exclude>**/*.pdf</exclude>
                </excludes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
              <format>
                <includes>
                  <include>**/*.md</include>
                  <include>**/.gitignore</include>
                </includes>
                <excludes>
                  <exclude>**/target/</exclude>
                </excludes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
                <indent>
                  <tabs>true</tabs>
                  <spacesPerTab>4</spacesPerTab>
                </indent>
              </format>
              <format>
                <includes>
                  <include>**/*.xml</include>
                  <include>**/.pydevproject</include>
                </includes>
                <excludes>
                  <exclude>**/plugin.xml</exclude>
                  <exclude>**/pom.xml</exclude>
                  <exclude>**/dependency-reduced-pom.xml</exclude>
                  <exclude>**/gradle.xml</exclude>
                  <exclude>**/target/</exclude>
                </excludes>
                <eclipseWtp>
                  <type>XML</type>
                  <files>
                    <file>${maven.multiModuleProjectDirectory}/spotless.xml.prefs</file>
                  </files>
                </eclipseWtp>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
            </formats>
            <java>
              <googleJavaFormat>
                <version>1.19.2</version>
                <reflowLongStrings>true</reflowLongStrings>
              </googleJavaFormat>
              <trimTrailingWhitespace/>
              <endWithNewline/>
            </java>
            <pom>
              <sortPom>
                <expandEmptyElements>false</expandEmptyElements>
              </sortPom>
            </pom>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
